<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoneyHome</string>
    <string name="btn_start">Начать</string>
    <string name="main_label_text">Деньги Дома</string>
    <string name="add_expense">Добавить запись</string>
    <string name="history">История операций</string>
    <string name="analytics">Аналитика</string>
    <string name="exit">Выход</string>
    <string name="menu">Меню</string>
    <string name="date_hint">Дата dd.mm.yyyy</string>
    <string name="income">Доход</string>
    <string name="expense">Расход</string>
    <string name="amount_hint">Сумма</string>
    <string name="comment_hint">Комментарий</string>
    <string name="save_button">Сохранить запись</string>
    <string name="history_label">История операций</string>
    <string name="date_view">Дата</string>
    <string name="type_view">Тип</string>
    <string name="category_view">Категория</string>
    <string name="amount_view">Сумма</string>
    <string name="comment_view">Комментарий</string>
    <string name="end_date">По дату:</string>
    <string name="start_date">С даты:</string>
    <string name="end_date_text">По дату:</string>
    <string name="start_date_text">С даты:</string>
    <string name="filter">Фильтровать</string>
    <string-array name="transaction_categories">
        <item>Продукты</item>
        <item>Кафе</item>
        <item>Коммунальные услуги</item>
        <item>Транспорт</item>
        <item>Одежда</item>
        <item>Развлечения</item>
        <item>Здоровье</item>
        <item>Подарки</item>
        <item>Учеба</item>
        <item>Спорт</item>
        <item>Техника</item>
        <item>Долги</item>
        <item>Путешествия</item>
        <item>Авто</item>
        <item>Домашние животные</item>
        <item>Зарплата</item>
        <item>Калым</item>
        <item>Подарили</item>
        <item>Вселеная дала</item>
    </string-array>
    <string-array name="transaction_filter_categories">
        <item>Все</item>
        <item>Продукты</item>
        <item>Кафе</item>
        <item>Коммунальные услуги</item>
        <item>Транспорт</item>
        <item>Одежда</item>
        <item>Развлечения</item>
        <item>Здоровье</item>
        <item>Подарки</item>
        <item>Учеба</item>
        <item>Спорт</item>
        <item>Техника</item>
        <item>Долги</item>
        <item>Путешествия</item>
        <item>Авто</item>
        <item>Домашние животные</item>
        <item>Зарплата</item>
        <item>Калым</item>
        <item>Подарили</item>
        <item>Вселеная дала</item>
    </string-array>
    <string-array name="operation_types">
        <item>Доход</item>
        <item>Расход</item>
    </string-array>

</resources>