<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/date_view"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewType"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/type_view"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/category_view"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/amount_view"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewComment"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ellipsize="end"
        android:fontFamily="monospace"
        android:maxLines="5"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:text="@string/comment_view"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageViewDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/ic_delete" />

</LinearLayout>
