<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/for_background"
    tools:context=".ui.add.AddFragment">

    <ImageButton
        android:id="@+id/calendar_day_selector_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_calendar_month_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editTextDate"
        app:layout_constraintTop_toTopOf="@+id/editTextDate"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="294dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:hint="@string/date_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroupOperationType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@id/editTextDate"
        tools:ignore="UnknownId">

        <RadioButton
            android:id="@+id/radioButtonExpense"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/expense" />

        <RadioButton
            android:id="@+id/radioButtonIncome"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/income" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/transaction_categories"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupOperationType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioGroupOperationType"
        app:layout_constraintTop_toBottomOf="@id/radioGroupOperationType" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCategory"
        app:layout_constraintStart_toStartOf="@+id/radioGroupOperationType"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/comment_hint"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textMultiLine|textCapSentences"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextAmount"
        app:layout_constraintStart_toStartOf="@+id/editTextAmount"
        app:layout_constraintTop_toBottomOf="@id/editTextAmount" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextComment"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="201dp"
        android:layout_height="37dp"
        android:text="@string/add_expense"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

</androidx.constraintlayout.widget.ConstraintLayout>

