<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/for_background"
    tools:context=".ui.analytics.AnalyticsFragment">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/date_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/date_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="544dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barChart">

        <TextView
            android:id="@+id/textViewStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/start_date"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toStartOf="@id/textViewEndDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <DatePicker
            android:id="@+id/datePickerStart"
            android:layout_width="190dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:contextClickable="false"
            android:datePickerMode="calendar"
            app:layout_constraintEnd_toStartOf="@id/datePickerEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewStartDate" />

        <TextView
            android:id="@+id/textViewEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/end_date"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewStartDate"
            app:layout_constraintTop_toTopOf="parent" />

        <DatePicker
            android:id="@+id/datePickerEnd"
            android:layout_width="190dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:datePickerMode="calendar"
            android:contextClickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/datePickerStart"
            app:layout_constraintTop_toBottomOf="@id/textViewEndDate" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_input_layout">

        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:entries="@array/operation_types"
            app:layout_constraintEnd_toStartOf="@id/spinnerCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:entries="@array/transaction_categories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/spinnerType"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>